--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -107,6 +107,8 @@
                             <tr *ngIf="showIgnoredTags || tag.visibleIgnored || tag.trackingStatusId !== tagTrackingStatus.IGNORED">
                                 <td *ngIf="!tag.synonymOf">
                                     <p class="post-tag"><a href="https://stackoverflow.com/questions/tagged/{{tag.tagName}}">{{tag.tagName}}</a></p>
+                                    <a href="javascript:void(0);" (click)="showMore(tag)" *ngIf="!tag.showingMore">Show more</a>
+                                    <a href="javascript:void(0);" (click)="hideMore(tag)" *ngIf="tag.showingMore">Hide</a>
                                 </td>
                                 <td *ngIf="tag.synonymOf">
                                     <p class="post-tag"><a href="https://stackoverflow.com/questions/tagged/{{tag.tagName}}">{{tag.tagName}}</a></p>
@@ -128,6 +130,14 @@
                                     <a *ngIf="tag.trackingStatusId !== tagTrackingStatus.IGNORED" href="javascript:void(0)"
                                         (click)="setTagTrackingStatus(question.id, tag, false)">Ignore
                                         Tag</a>
+                                </td>
+                            </tr>
+                            <tr *ngIf="tag.showingMore && tag.questionCountOverTime">
+                                <td colspan="4">
+                                    <app-question-count-graph [data]="tag.questionCountOverTime" [featuredStarted]="question.featuredStarted"
+                                        [featuredEnded]="question.featuredEnded" [burnStarted]="question.burnStarted"
+                                        [burnEnded]="question.burnEnded">
+                                    </app-question-count-graph>
                                 </td>
                             </tr>
                         </ng-container>
