Link posts in unknown deletion resolver to the revisions page

--- a/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
+++ b/Rodgort/ClientApp/src/app/unknown-deletion-resolution/unknown-deletion-resolution.component.html
@@ -14,7 +14,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let postToVisit of postsToVisit">
-        <td>{{postToVisit.postId}}</td>
+        <td><a href="https://stackoverflow.com/posts/{{postToVisit.postId}}/revisions">{{postToVisit.postId}}</a></td>
         <td>{{postToVisit.status}}</td>
       </tr>
     </tbody>
