Remove extra top padding from requests page

--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -1,4 +1,4 @@
-<form class="form-inline" style="padding: 10px" #filterForm="ngForm">
+<form class="form-inline" style="padding: 10px; padding-top: 0px;" #filterForm="ngForm">
     <input type="text" class="form-control mt-2 mt-sm-2 mr-sm-2 mb-sm-0" id="contentInput" placeholder="Tag" name="tag"
         [(ngModel)]="filter.tag" #tag="ngModel">
     <div class="input-group mt-2 mt-sm-2 mr-sm-2 mb-sm-0">
