More responsive fixes

--- a/Rodgort/ClientApp/src/app/progress/progress.component.scss
+++ b/Rodgort/ClientApp/src/app/progress/progress.component.scss
@@ -1,9 +1,8 @@
 .post-tag {
-    display: inline;
+    display: inline-block;
 
     padding: .4em .5em;
     margin: 2px 2px 2px 0;
-    font-size: 11px;
     line-height: 1;
 
     white-space: nowrap;
