--- a/Rodgort/ClientApp/src/app/requests/requests.component.scss
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.scss
@@ -1,9 +1,8 @@
 .post-tag, .post-metatag, .post-statustag, .tag-tracked, .tag-pending, .tag-ignored {
-    display: inline;
+    display: inline-block;
 
     padding: .4em .5em;
     margin: 2px 2px 2px 0;
-    font-size: 11px;
     line-height: 1;
 
     white-space: nowrap;
@@ -14,6 +13,10 @@
     border-radius: 3px;
 
     font-size: 12px;
+}
+
+table, table .post-tag, table .tag-tracked, table .tag-pending, table .tag-ignored {
+    font-size: 0.75rem;
 }
 
 .post-tag {
