Why were we using rem? Just use px

--- a/Rodgort/ClientApp/src/app/requests/requests.component.scss
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.scss
@@ -15,8 +15,8 @@
     font-size: 12px;
 }
 
-table, table .post-tag, table .tag-tracked, table .tag-pending, table .tag-ignored {
-    font-size: 0.75rem;
+table {
+    font-size: 12px;
 }
 
 .post-tag {
