--- a/Rodgort/ClientApp/src/app/requests/requests.component.scss
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.scss
@@ -15,6 +15,18 @@
     font-size: 12px;
 }
 
+@media(max-width: 415px) {
+    .post-tag {
+        font-size: 10px;
+    }
+}
+
+@media(max-width: 390px) {
+    .post-tag {
+        font-size: 9px;
+    }
+}
+
 table {
     font-size: 12px;
 }
