--- a/Rodgort/ClientApp/src/app/requests/requests.component.scss
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.scss
@@ -13,23 +13,23 @@
     border-radius: 3px;
 
     font-size: 12px;
+
+    white-space: normal;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
-@media(max-width: 415px) {
-    .post-tag {
+@media(max-width: 588px) {
+    .post-tag, .tag-pending {
         font-size: 10px;
     }
 }
 
-@media(max-width: 390px) {
-    .post-tag {
+@media(max-width: 515px) {
+    .post-tag, .tag-pending {
         font-size: 9px;
-    }
-}
-
-@media(max-width: 385px) {
-    .post-tag {
-        font-size: 8px;
     }
 }
 
