Extract pagination control, and improve responsiveness

--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -143,10 +143,5 @@
     </div>
 </ng-container>
 
-<nav style="margin-top: 20px;">
-    <ul class="pagination">
-        <li class="page-item" [class.disabled]="page.Disabled" [class.active]="page.Active" *ngFor="let page of pagingInfo">
-            <a class="page-link" (click)="loadPage(page.Number)" href="javascript:void(0);">{{page.Name}}</a>
-        </li>
-    </ul>
-</nav>
+<app-pagination [pagingInfo]="pagingInfo">
+</app-pagination>
