Fix broken paging

--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -143,5 +143,5 @@
     </div>
 </ng-container>
 
-<app-pagination [pagingInfo]="pagingInfo">
+<app-pagination [pagingInfo]="pagingInfo" [loadPage]="loadPage">
 </app-pagination>
