Fix paging for small screens

--- a/Rodgort/ClientApp/src/app/pagination/pagination.component.scss
+++ b/Rodgort/ClientApp/src/app/pagination/pagination.component.scss
@@ -10,8 +10,18 @@
     }
 }
 
+.pagination .minified-hidden {
+    display: block;
+}
+.pagination .minified-shown {
+    display: none;
+}
+
 @media(max-width: 427px) {
-    .pagination .page-neighbour {
+    .pagination .minified-hidden {
         display: none;
+    }
+    .pagination .minified-shown {
+        display: block;
     }
 }
