--- a/Rodgort/ClientApp/src/app/pagination/pagination.component.html
+++ b/Rodgort/ClientApp/src/app/pagination/pagination.component.html
@@ -1,7 +1,10 @@
 <nav>
     <ul class="pagination">
         <li class="page-item" [class.disabled]="page.Disabled" [class.active]="page.Active" *ngFor="let page of pagingInfo">
-            <a class="page-link" [class.page-neighbour]="page.IsNeighbour" (click)="pageWasClicked(page.Number)" href="javascript:void(0);">{{page.Name}}</a>
+            <a class="page-link" 
+                [class.minified-shown]="page.MinifiedShown" 
+                [class.minified-hidden]="page.MinifiedHidden" 
+                (click)="pageWasClicked(page.Number)" href="javascript:void(0);">{{page.Name}}</a>
         </li>
     </ul>
 </nav>
