--- a/Rodgort/ClientApp/src/app/snackbar/new-version-deploying/new-version-deploying.component.html
+++ b/Rodgort/ClientApp/src/app/snackbar/new-version-deploying/new-version-deploying.component.html
@@ -1,2 +1,1 @@
-A new version of Rodgort is being <a class="deploy-link" href="https://gitlab.com/rjrudman/Rodgort/pipelines">deployed</a>. 
-<a class="dismiss-button" href="javascript:void(0);" (click)="dismissSnackbar()">Dismiss</a>
+A new version of Rodgort is being <a class="deploy-link" href="https://gitlab.com/rjrudman/Rodgort/pipelines">deployed</a>
