--- a/Rodgort/ClientApp/src/app/tag-tracking-status-audits/tag-tracking-status-audits.component.html
+++ b/Rodgort/ClientApp/src/app/tag-tracking-status-audits/tag-tracking-status-audits.component.html
@@ -18,7 +18,7 @@
   <tbody>
     <tr *ngFor="let audit of audits">
       <td title="{{audit.timeChanged}}">{{audit.localTime}}</td>
-      <td><a routerLink="/users/{{audit.userId}}">{{audit.userName}}</a></td>
+      <td><a routerLink="/user/{{audit.userId}}">{{audit.userName}}</a></td>
       <td><a href="https://meta.stackoverflow.com/q/{{audit.metaQuestionId}}">{{audit.metaQuestionTitle}}</a></td> 
       <td>{{audit.tag}}</td> 
       <td>{{audit.previousStatus}}</td> 
